// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepHeader > should render 1`] = `
<DocumentFragment>
  <div
    class="sm:mt-8"
  >
    <div
      class="flex flex-col"
    >
      <span
        class="css-tgbw37"
      >
        title
      </span>
      <ul
        class="css-xa5o6q"
      >
        <li
          class="css-11vjikd"
        />
        <li
          class="css-1ckw8yn"
        />
        <li
          class="css-1ckw8yn"
        />
        <li
          class="css-1ckw8yn"
        />
      </ul>
    </div>
    <div
      class="flex flex-col justify-between sm:flex-row"
    >
      <div
        class="flex items-end justify-between bg-theme-background mt-8 hidden sm:block"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center gap-3"
          >
            <h1
              class="mb-0 text-2xl"
              data-testid="header__title"
            >
              title
            </h1>
          </div>
          <div
            class="flex items-center leading-5 text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            subtitle
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepHeader > should render simple header without a provider 1`] = `
<DocumentFragment>
  <div
    class="flex items-end justify-between bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex items-center gap-3"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          title
        </h1>
      </div>
      <div
        class="flex items-center leading-5 text-theme-secondary-text"
        data-testid="header__subtitle"
      >
        subtitle
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepHeader > should render with extra 1`] = `
<DocumentFragment>
  <div
    class="sm:mt-8"
  >
    <div
      class="flex flex-col"
    >
      <span
        class="css-tgbw37"
      >
        title
      </span>
      <ul
        class="css-xa5o6q"
      >
        <li
          class="css-11vjikd"
        />
        <li
          class="css-1ckw8yn"
        />
        <li
          class="css-1ckw8yn"
        />
        <li
          class="css-1ckw8yn"
        />
      </ul>
    </div>
    <div
      class="flex flex-col justify-between sm:flex-row"
    >
      <div
        class="flex items-end justify-between bg-theme-background mt-8 hidden sm:block"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center gap-3"
          >
            <h1
              class="mb-0 text-2xl"
              data-testid="header__title"
            >
              title
            </h1>
          </div>
          <div
            class="flex items-center leading-5 text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            subtitle
          </div>
        </div>
      </div>
      <div
        class="mt-8 sm:mt-0"
      >
        extra
      </div>
    </div>
  </div>
</DocumentFragment>
`;
